# student-machine

./: README.md  main.py  pyproject.toml
student_machine/: __init__.py  __main__.py  backup.py  balloon.py  cloud_init.py  config.py  qemu_install.py  run.py  service.py  setup.py  start.py  status.py  stop.py  utils.py
