[project]
name = "student-machine"
version = "0.1.0"
description = "Cross-platform QEMU VM manager for students - provides a unified Debian XFCE virtual machine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["qemu", "vm", "virtual-machine", "education", "student"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Emulators",
]

[project.scripts]
student-machine = "student_machine.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/student-machine"
Documentation = "https://github.com/yourusername/student-machine#readme"
Repository = "https://github.com/yourusername/student-machine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["student_machine"]
